--- a/index.html
+++ b/index.html
@@ -12,66 +12,73 @@
 Por <a href="https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a>
 </header>
 <main>
-Estou ficando cansado
-Da tal tecnologia
-Só se fala por e-mail
-Mensagem curta e fria
-Twitter e Facebook
-Antes que eu caduque
-Vou dizer tudo em poesia.
-<article>
-Não é mais como era antes
-É tudo abreviado
-"Você" só tem duas letras
-O "O" e o "E" foi riscado
-Para declarar o amor
-Basta botar uma flor
-E um coração desenhado.
+<p>Estou ficando cansado</p>
+<p>Da tal tecnologia</p>
+<p>Só se fala por e-mail</p>
+<p>Mensagem curta e fria</p>
+<p>Twitter e Facebook</p>
+<p>Antes que eu caduque</p>
+<p class="espaco">Vou dizer tudo em poesia.</p>
+
+    <article>
+        <article id="texto1">
+<p>Não é mais como era antes</p>
+<p>É tudo abreviado</p>
+<p>"Você" só tem duas letras</p>
+<p>O "O" e o "E" foi riscado</p>
+<p>Para declarar o amor</p>
+<p>Basta botar uma flor</p>
+<p>E um coração desenhado.</p>
 </article>
 
-Arroba agora não pesa
-É parte de um endereço
-Ponto final nem se usa
-Ou vai até no começo
-Agora é .com
-Se o saite é muito bom
-Ele vale um alto preço.
+</article>
 
-Pra piorar a liguagem
-O emoticom é um risco
-Tem símbolo para tudo
-Ponto e vírgula e um asterisco
-Um beijo significa
-Pra entender como fica
-Decifre esse rabisco.
+<p>Arroba agora não pesa</p>
+<p>É parte de um endereço</p>
+<p>Ponto final nem se usa</p>
+<p>Ou vai até no começo</p>
+<p>Agora é .com</p>
+<p>Se o saite é muito bom</p>
+<p>Ele vale um alto preço.</p>
 
-//---
+<p>Pra piorar a liguagem</p>
+<p>O emoticom é um risco</p>
+<p>Tem símbolo para tudo</p>
+<P>Ponto e vírgula e um asterisco</P>
+<p>Um beijo significa</p>
+<p>Pra entender como fica</p>
+<p class="espaco">Decifre esse rabisco.</p>
 
-Tenho saudade das cartas
-Escritas com a própria mão
-Mandava no mês de Junho
-Só chegava no Verão
-Mas matava a saudade
-Era texto de verdade
-Nas linhas do coração.
+<div>
+<div id="texto2">
+<p>Tenho saudade das cartas</p>
+<p>Escritas com a própria mão</p>
+<p>Mandava no mês de Junho</p>
+<P>Só chegava no Verão</P>
+<p>Mas matava a saudade</p>
+<p>Era texto de verdade</p>
+<p>Nas linhas do coração.</p>
+</div>
+</div>
 
-//---
+<p>Agora, escrevo e envio</p>
+<p>Chegando na mesma hora</p>
+<p>Mas quando vou prosear</p>
+<p>A pessoa foi embora</p>
+<p>Abriu outro aplicativo</p>
+<p>O mundo ficou cativo</p>
+<p>Da tecnologia do agora.</p>
 
-Agora, escrevo e envio
-Chegando na mesma hora
-Mas quando vou prosear
-A pessoa foi embora
-Abriu outro aplicativo
-O mundo ficou cativo
-Da tecnologia do agora.
-
-Felizmente, pra orar
-Não precisa de internet
-Deus escuta todo mundo
-Se quiser, faça esse teste
-Dois pontos são dois joelhos
-Seus lábios são aparelhos
-Deixe que Deus interprete.
+<p>Felizmente, pra orar</p>
+<p>Não precisa de internet</p>
+<P>Deus escuta todo mundo</P>
+<p>Se quiser, faça esse teste</p>
+<p>Dois pontos são dois joelhos</p>
+<p>Seus lábios são aparelhos</p>
+<p>Deixe que Deus interprete.</p>
+<footer>
+    Site criado por Paulo Cezar para o cursoemvideo
+</footer>
 </main>
 </body>
 </html>
