--- a/index.html
+++ b/index.html
@@ -4,81 +4,106 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cordel Moderno</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilo/estilo.css">
 </head>
 <body>
     <header>
-    <h1 id="passion">Cordel Moderno</h1>
-Por <a href="https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a>
-</header>
-<main>
-<p>Estou ficando cansado</p>
-<p>Da tal tecnologia</p>
-<p>Só se fala por e-mail</p>
-<p>Mensagem curta e fria</p>
-<p>Twitter e Facebook</p>
-<p>Antes que eu caduque</p>
-<p class="espaco">Vou dizer tudo em poesia.</p>
+        <h1>
+            Cordel Moderno
+        </h1>
+        <p>
+            Por <a href="https://www.recantodasletras.com.br/poesias/3186743"> Milton Duarte</a>
+        </p>
+    </header>
 
-    <article>
-        <article id="texto1">
-<p>Não é mais como era antes</p>
-<p>É tudo abreviado</p>
-<p>"Você" só tem duas letras</p>
-<p>O "O" e o "E" foi riscado</p>
-<p>Para declarar o amor</p>
-<p>Basta botar uma flor</p>
-<p>E um coração desenhado.</p>
-</article>
+    <section class="normal">
+        <p>
+            Estou ficando cansado <br>
+            Da tal tecnologia <br>
+            Só se fala por e-mail <br>
+            Mensagem curta e fria <br>
+            Twitter e Facebook <br>
+            Antes que eu caduque <br>
+            Vou dizer tudo em poesia.
+        </p>
+    </section>
 
-</article>
 
-<p>Arroba agora não pesa</p>
-<p>É parte de um endereço</p>
-<p>Ponto final nem se usa</p>
-<p>Ou vai até no começo</p>
-<p>Agora é .com</p>
-<p>Se o saite é muito bom</p>
-<p>Ele vale um alto preço.</p>
 
-<p>Pra piorar a liguagem</p>
-<p>O emoticom é um risco</p>
-<p>Tem símbolo para tudo</p>
-<P>Ponto e vírgula e um asterisco</P>
-<p>Um beijo significa</p>
-<p>Pra entender como fica</p>
-<p class="espaco">Decifre esse rabisco.</p>
+    <section class="imagem">
+        <p>
+            Não é mais como era antes <br>
+            É tudo abreviado <br>
+            "Você" só tem duas letras <br>
+            O "O" e o "E" foi riscado <br>
+            Para declarar o amor <br>
+            Basta botar uma flor <br>
+            E um coração desenhado.
+        </p>
+    </section>
 
-<div>
-<div id="texto2">
-<p>Tenho saudade das cartas</p>
-<p>Escritas com a própria mão</p>
-<p>Mandava no mês de Junho</p>
-<P>Só chegava no Verão</P>
-<p>Mas matava a saudade</p>
-<p>Era texto de verdade</p>
-<p>Nas linhas do coração.</p>
-</div>
-</div>
 
-<p>Agora, escrevo e envio</p>
-<p>Chegando na mesma hora</p>
-<p>Mas quando vou prosear</p>
-<p>A pessoa foi embora</p>
-<p>Abriu outro aplicativo</p>
-<p>O mundo ficou cativo</p>
-<p>Da tecnologia do agora.</p>
 
-<p>Felizmente, pra orar</p>
-<p>Não precisa de internet</p>
-<P>Deus escuta todo mundo</P>
-<p>Se quiser, faça esse teste</p>
-<p>Dois pontos são dois joelhos</p>
-<p>Seus lábios são aparelhos</p>
-<p>Deixe que Deus interprete.</p>
-<footer>
-    Site criado por Paulo Cezar para o cursoemvideo
-</footer>
-</main>
+    <section class="normal">
+        <p>
+            Arroba agora não pesa <br>
+            É parte de um endereço <br>
+            Ponto final nem se usa <br>
+            Ou vai até no começo <br>
+            Agora é .com <br>
+            Se o saite é muito bom <br>
+            Ele vale um alto preço. <br>
+        </p>
+
+        <p>
+            Pra piorar a liguagem <br>
+            O emoticom é um risco <br>
+            Tem símbolo para tudo <br>
+            Ponto e vírgula e um asterisco <br>
+            Um beijo significa <br>
+            Pra entender como fica <br>
+            Decifre esse rabisco.
+        </p>
+    </section>
+
+
+
+    <section class="imagem">
+        <p>
+            Tenho saudade das cartas <br>
+            Escritas com a própria mão <br>
+            Mandava no mês de Junho <br>
+            Só chegava no Verão <br>
+            Mas matava a saudade <br>
+            Era texto de verdade <br>
+            Nas linhas do coração.
+        </p>
+    </section>
+
+
+
+    <section class="normal">
+        <p>
+            Agora, escrevo e envio <br>
+            Chegando na mesma hora <br>
+            Mas quando vou prosear <br>
+            A pessoa foi embora <br>
+            Abriu outro aplicativo <br>
+            O mundo ficou cativo <br>
+            Da tecnologia do agora.<br>
+        </p>
+        <p>
+            Felizmente, pra orar <br>
+            Não precisa de internet <br>
+            Deus escuta todo mundo <br>
+            Se quiser, faça esse teste <br>
+            Dois pontos são dois joelhos <br>
+            Seus lábios são aparelhos <br>
+            Deixe que Deus interprete. <br>
+        </p>
+    </section>
+    <footer>
+        <p>Site criado por <a href="https://github.com/paulocezar3" target="_blank">Paulo Cezar</a> para o <a href="https:www.cursoemvideo.com" target="_blank">CursoemVideo</a></p>
+    </footer>
 </body>
 </html>
